<resources>
    <string name="app_name" translatable="false">PGPClipper</string>
    <string name="enabledService">Enable Service</string>
    <string name="enabledServiceSummary">Check this box to allow PGPClipper stay alive in background.\nNote that this application *will* access clipboard data.</string>
    <string name="pgpServiceProviderAppTitleString">OpenPGP Service Provider status</string>
    <string name="appVersionString" translatable="false">0.22</string>
    <string name="appVersionTitleString">Version</string>
    <string name="licenseTitleString">License</string>
    <string name="licenseContentString" translatable="false">Apache License 2.0</string>
    <string name="thirdPartyLicenseTitleString">Third Party License</string>
    <string name="thirdPartyLibraryContentString" translatable="false">OpenPGP API Library - Apache License 2.0\nGoldfinger - Apache License 2.0</string>
    <string name="issueTrackingTitleString">Issue tracking and source code</string>
    <string name="issueTrackingContentString" translatable="false">GitHub</string>
    <string name="signatureToggleText">Signature Toggle</string>
    <string name="replyText">Reply</string>
    <string name="processingResultText">Processing Result</string>
    <string name="signatureStatusText">Signature Status: %1$s (%2$s)</string>
    <string name="decryptionStatusText">Decryption Status: %1$s</string>
    <string name="fastReplyText">Press result field for fast reply</string>
    <string name="tryAgainText">To try again, Press result field.</string>
    <string name="NotificationTickerText">Possible PGP Data Detected</string>
    <string name="NotificationTitleText">Possible PGP Data Detected</string>
    <string name="NotificationContentText">Attempt to process it?</string>
    <string name="darkText">Dark</string>
    <string name="lightText">Light</string>
    <string name="themeStyleText">Theme Setting</string>
    <string name="errorCannotProcess">cannot process</string>
    <string name="errorCannotContinue">Error, cannot continue. Send bug report to author.</string>
    <string name="hintRecipient">To:</string>
    <string name="enableNFCAuth">Enable NFC Authentication</string>
    <string name="enableNFCAuthSummary">Check this box to allow PGPClipper perform signature with NFC token.\nNote that this application *will* store your PGP password if you enable this function.</string>
    <string name="credentialWrongText">Credential was wrong, try again</string>
    <string name="alternativeAuthenticationMethodText">%1$s to authenticate\nPress result field for password/stored credential fallback</string>
    <string name="nfcAuthenticationSetupWizardTitleText">NFC Authentication Setup Wizard</string>
    <string name="nfcWizard01Text">This Wizard will help you setup NFC token authentication.\n\nPress next to continue.\nPress close to close this wizard at anytime.</string>
    <string name="nfcWizard02Text">Generating salt value for encryption.\nPlease wait.</string>
    <string name="nfcWizard03Text">PGPClipper has successfully generated salt.</string>
    <string name="nfcWizard04fingerprintWizard02Text">Now you will provide your default key\'s password.\nThis information will be encrypted.</string>
    <string name="nfcWizard05PasswordInputText">Enter PGP password</string>
    <string name="nfcWizard05PasswordReInputText">Enter PGP password again</string>
    <string name="nfcWizard06Text">Tap NFC token to your device.</string>
    <string name="nfcWizard07Text">Tap NFC token to your device again.</string>
    <string name="nfcWizard08Text">NFC token successfully detected.</string>
    <string name="nfcWizard11Text">This NFC token cannot be used.</string>
    <string name="nfcWizard12Text">Generating hash and encrypting…\nThis might take a long time (few minutes)\ndepending on your device\'s power.\n\nScreen will stay on.</string>
    <string name="closeText">Close</string>
    <string name="nextText">Next</string>
    <string name="alternativeReplyNotificationText">%1$s to sign and encrypt message\nPress reply for password fallback</string>
    <string name="enableFingerprintAuth">Enable Fingerprint Authentication</string>
    <string name="enableFingerprintAuthSummary">Check this box to allow PGPClipper perform signature with fingerprint.\nNote that this application *will* store your PGP password if you enable this function.</string>
    <string name="fingerprintSetupWizardTitleText" >Fingerprint Setup Wizard</string>
    <string name="fingerprintWizard01Text" >This Wizard will help you setup fingerprint authentication.\n\nPress next to continue.\nPress close to close this wizard at anytime.</string>
    <string name="fingerprintWizard04Text">Locate your device\'s fingerprint sensor, and scan.</string>
    <string name="fingerprintCorrectString">Fingerprint is correct, complete!</string>
    <string name="fingerprintErrorString">Could not read fingerprint from sensor, try again.</string>
    <string name="fingerprintFatalErrorString">Fatal error! Try again later.</string>
    <string name="nfcNotAvailableString">NFC hardware not available</string>
    <string name="nfcDisabledString">Enable NFC in settings</string>
    <string name="alternativeAuthenticationMethodNFCText">Tap NFC token</string>
    <string name="alternativeAuthenticationMethodFingerprintText">Touch fingerprint scanner</string>
    <string name="channel_name">PGPClipper clipboard notification channel</string>
    <string name="channel_description">Notifies user about possible PGP data block detection</string>
    <string name="battery_optimazation_information_toast">From Android M, PGPClipper requires user to disable battery optimization in order to read clipboard data in the background. Please disable battery optimization.</string>
    <string name="aes_key_init_notice_toast">AES implementation before version 0.22 was not suitable (AES-ECB), removing encrypted PGP key password cache from device.</string>
</resources>
